Footer links fixed, added the correct path and removed extra margin from the our fleet bg image

--- a/assets/style.css
+++ b/assets/style.css
@@ -493,9 +493,7 @@ footer {
         padding-top: 16%;
         padding-bottom: 16%;
    }
-    .bg-query-fleet {
-        margin-left: 20px;
-   }
+
 }
 
 /* Car SPEC PAGE */
